--- a/static/style.css
+++ b/static/style.css
@@ -84,12 +84,13 @@ transparent 75%,
 #999 75%,
 #999
 );
-background-size: 60px 60px;
-background-position: 0 0, 30px 30px;
+background-size: 120px 120px;
+background-position: 0 0, 60px 60px;
 display: flex;
 justify-content: center;
 align-items: center;
-height: 100vh;
+height:100vh;
+
 }
 .password-reset-container {
 background-color: #fff;
@@ -98,6 +99,7 @@ border-radius: 8px;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 width: 300px;
 text-align: center;
+
 }
 .password-form-group {
 margin-bottom: 20px;
@@ -138,12 +140,12 @@ background-color: #fff;
 padding: 20px;
 border-radius: 8px;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-width: 300px;
-text-align: center;
+text-align: center; margin-top:100px;
+width:300px;
 }
 .profile-picture {
-width: 100px;
-height: 100px;
+width: 200px;
+height: 200px;
 border-radius: 50%;
 margin-bottom: 20px;
 }
@@ -159,7 +161,7 @@ font-weight: bold;
 margin-bottom: 10px;
 }
 .buttons {
-display: flex;
+display: inline;
 flex-direction: column;
 margin-bottom: 20px;
 }
@@ -187,3 +189,5 @@ width: 100%;
 .play-button:hover {
 background-color: #218838;
 }
+
+.profile-input{ width:80%; margin:10px; padding:5px;}
