--- a/static/style.css
+++ b/static/style.css
@@ -286,3 +286,65 @@ margin: 0;
 .opponent .info p {
 margin: 5px 0;
 }
+
+/* Full-screen popup styling */
+.popup {
+display: none; /* Hidden by default */
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+justify-content: center;
+align-items: center;
+}
+
+.popup-content {
+background-color: #fff;
+padding: 20px;
+text-align: center;
+border-radius: 10px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+#new-match-button {
+background-color: #28a745;
+color: white;
+border: none;
+padding: 15px;
+border-radius: 5px;
+cursor: pointer;
+}
+#resign-button {
+background-color: #28a745;
+color: white;
+border: none;
+padding: 10px;
+border-radius: 5px;
+cursor: pointer;
+width:50%;
+margin-left:25%;
+}
+
+.promotion-menu {
+position: absolute;
+top: 10px;
+left: 10px;
+display: None;
+flex-direction: column;
+background-color: rgba(255, 255, 255, 0.9);
+border: 1px solid #ccc;
+border-radius: 5px;
+padding: 5px;
+z-index: 1000;
+}
+
+.promotion-piece {
+width: 30px;
+height: 30px;
+margin: 5px;
+cursor: pointer;
+}
+
+
